hw3/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deployment
  namespace: hw3
  labels:
    app: flaskapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
        - name: flaskapp
          image: saitburakyucekaya/flaskapp:latest
          ports:
            - containerPort: 5000
