hw3/k8s/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
  namespace: hw3
spec:
  selector:
    app: flaskapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
